[gd_scene load_steps=5 format=3 uid="uid://d2qvyn47xmt1e"]

[ext_resource type="Script" path="res://assets/scripts/pipe.gd" id="1_mtchl"]
[ext_resource type="Texture2D" uid="uid://cytwweesel5uj" path="res://assets/pipe/pipe_green.png" id="2_ue1xu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k00x3"]
size = Vector2(48, 170)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxkql"]
size = Vector2(18, 136)

[node name="Pipe" type="Node2D"]
script = ExtResource("1_mtchl")
walk_speed = 180
pipe_texture = Array[String](["res://assets/pipe/pipe_green.png", "res://assets/pipe/pipe_red.png"])

[node name="TopPipe" type="StaticBody2D" parent="."]
scale = Vector2(-1, -1)

[node name="Texture" type="Sprite2D" parent="TopPipe"]
texture_filter = 1
texture = ExtResource("2_ue1xu")

[node name="Collision" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(0, -75)
shape = SubResource("RectangleShape2D_k00x3")

[node name="BottomPipe" type="StaticBody2D" parent="."]
position = Vector2(0, 456)

[node name="Texture" type="Sprite2D" parent="BottomPipe"]
texture_filter = 1
texture = ExtResource("2_ue1xu")

[node name="Collision" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(0, -75)
shape = SubResource("RectangleShape2D_k00x3")

[node name="Notifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.43051e-06, 228)
scale = Vector2(2.4, 23.8)

[node name="ScoreArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(33, 228)
shape = SubResource("RectangleShape2D_gxkql")

[connection signal="screen_exited" from="Notifier" to="." method="_on_screen_exited"]
[connection signal="body_exited" from="ScoreArea" to="." method="_on_body_exited"]
